# facetotext

./: .flattened-pom.xml  .gitignore  README.md  facebytes.db  main.py  package-lock.json  package.json  pom.xml  pyproject.toml
.run/: Dev Run.run.xml
src/main/bundles/: dev.bundle  prod.bundle
src/main/frontend/styles/: styles.css
src/main/java/net/codesapien/: Application.java  ChatConfig.java  I18nProviderImpl.java  MainView.java  Notifier.java  PromptField.java  SendButton.java  Video.java  WebCam.java
src/main/python/: FaceApi.py  FaceTask.py  FaceWorker.py
src/main/resources/: application.yml  messages_en.properties
src/main/resources/translations/: messages.properties  messages_nl_BE.properties  messages_tr.properties
src/test/java/net/codesapien/: DevModeApplication.java
